--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 VPS=true
 ALWAYS_ONLINE="true"
-SESSION_ID=your_section_id
+SESSION_ID=Raganork~24606dffb494b452b82965177650c98b:424f44763450376d6842383d
 HANDLERS="."
 SUDO="919547261290"
 AUTO_READ_STATUS="true"
